# openGPC

./: .clang-format  .gitignore  LICENSE  README.md
data/: downloadSintelOpticalFlow.sh  downloadSintelStereo.sh
forests/: defaultTauForest.txt  defaultZeroForest.txt
lib/: Doxyfile
lib/gpc/: Feature.hpp  Fern.hpp  SintelOpticalFlow.hpp  SintelStereo.hpp  buffer.hpp  filter.hpp  hashmatch.hpp  inference.hpp  training.hpp
samples/: CMakeLists.txt  extract.cpp  sparsematch.cpp  train.cpp
